--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+こんにちは！
 </head>
 
 <body>
 
-<h3>Hey!</h3>
-<p>I am Rio:)))</p>
+<h2>Hey!</h2>
+<p>I am Rio</p>
 
 <p>I like playing volleyball</p>
 
@@ -16,5 +17,4 @@
 <img src="https://i.pinimg.com/736x/aa/1c/89/aa1c895ca2d02c44ea775bdb90e89509.jpg"
 
 </body>
-
 </html>
